objects/Tickets__c.object
<CustomObject>
    <description>TO log tickets</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Tickets</relationshipLabel>
        <relationshipName>Tickets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_team__c</fullName>
        <label>Assigned team</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Deployment Team</fullName>
                </value>
                <value>
                    <fullName>Devops Team</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Release_name__c</fullName>
        <description>Release Name</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Release Name</inlineHelpText>
        <label>Release name</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Release_notes_updates__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Release notes updates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Requestor__c</fullName>
        <defaultValue>$User.Username</defaultValue>
        <description>Logged in user</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Requestor</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required_on__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Required on</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <description>Enter Subject</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Subject</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>additional_Instructions__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>additional Instructions</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>assigned_to__c</fullName>
        <label>assigned to</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Nagendra</fullName>
                </value>
                <value>
                    <fullName>Nithin</fullName>
                </value>
                <value>
                    <fullName>Rajiv</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>completed_on__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>completed_on</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>started_on__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>started_on</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>status__c</fullName>
        <label>status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>inprogress</fullName>
                </value>
                <value>
                    <fullName>on-hold</fullName>
                </value>
                <value>
                    <fullName>completed</fullName>
                </value>
                <value>
                    <fullName>cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>target_env__c</fullName>
        <description>target environment</description>
        <label>target env</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>INT</fullName>
                </value>
                <value>
                    <fullName>QA</fullName>
                </value>
                <value>
                    <fullName>UAT</fullName>
                </value>
                <value>
                    <fullName>PROD</fullName>
                </value>
                <value>
                    <fullName>FDT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Ticket</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>INC- {0000}</displayFormat>
        <label>Tickets Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tickets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>completed_on</fullName>
        <active>true</active>
        <description>Mandatory if status changed to Completed</description>
        <errorConditionFormula>isblank(completed_on__c ) &amp;&amp; ISPICKVAL(status__c,&apos;completed&apos;)</errorConditionFormula>
        <errorMessage>Completed date Mandatory</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>started_on</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( PRIORVALUE( status__c ) , &quot;New&quot;) &amp;&amp;    ISCHANGED(status__c) &amp;&amp; isblank( started_on__c )</errorConditionFormula>
        <errorMessage>Started date is mandatory</errorMessage>
    </validationRules>
</CustomObject>